[package]
name = "solana-shred-dos"
version = "0.1.0"
description = "Application aiming to DOS a Solana network by ingesting and rebroadcasting shreds"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = "0.5"
env_logger = "0.9.0"
gethostname = "0.2.3"
itertools = "0.10.3"
log = "0.4.14"
rand = "0.7.0"
signal-hook = "0.3.14"
solana-client = { path = "../client", version = "=1.13.8" }
solana-gossip = { path = "../gossip", version = "=1.13.8" }
solana-measure = { path = "../measure", version = "=1.13.8" }
solana-metrics = { path = "../metrics", version = "=1.13.8" }
solana-perf = { path = "../perf", version = "=1.13.8" }
solana-sdk = { path = "../sdk", version = "=1.13.8" }
solana-net-utils = { path = "../net-utils", version = "=1.13.8" }
solana-streamer = { path = "../streamer", version = "=1.13.8" }
thiserror = "1.0"
