[package]
name = "solana-shred-dos"
version = "0.1.0"
description = "Application aiming to DOS a Solana network by ingesting and rebroadcasting shreds"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = { workspace = true }
env_logger = { workspace = true }
gethostname = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
signal-hook = { workspace = true }
solana-gossip = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-perf = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
